[tool.poetry]
name = "docs-robo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
google-generativeai = "^0.4.1"
langchain = "^0.1.14"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.8.0"
langchain-google-genai = "^1.0.1"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
